--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Xat Me SimplyGabi</title>
+        <title>Xat SimplyGabi</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Gabii">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Berkshire Swash">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cookie">
     </head>
-    <body>
-    <div class="butterflys">
-        <div class="butterflys-turn">
-            <div class="butterflys-flutter"></div>
+  <body>
+    <div class="profile-xat">
+        <span class="profile-xat-bg"></span>
+        <span id="userAvatar"></span>
+        <div class="xat-profile-name">
+          <p id="username"></p>
+          <p id="description"></p>
+          <div class="xat-gradient-bar"></div>
         </div>
     </div>
     <div class="butterflys">
@@ -23,18 +29,10 @@
             <div class="butterflys-flutter"></div>
         </div>
     </div>
-    <div class="butterfly-plant">
-	<div class="tentacles"></div>
-	<div class="tentacles1"></div>
-	<div class="body1"></div>
-	<div class="body"></div>
-	<div class="head"></div>
-	<div class="wings">
-            <div class="wing wing-top wing-bottom-left"></div>
-            <div class="wing wing-top wing-bottom-right"></div>
-            <div class="wing wing-top wing-top-left"></div>
-            <div class="wing wing-top wing-top-right"></div>
-         </div>
+    <div class="butterflys">
+        <div class="butterflys-turn">
+            <div class="butterflys-flutter"></div>
+        </div>
     </div>
     <div class="plant">
 	<div class="flower flower1">
@@ -85,5 +83,6 @@
     <div class="footer">
          </div>
     </div>
-</body>
+        <script src="profile.js"></script>
+  </body>
 </html>
